# Teeworlds-Alchemist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bam.lua  maoniang.txt  storage.cfg
Alchemy/: alchemy.json  potion.json
cmake/: FindICU.cmake  FindMySQL.cmake
datasrc/: compile.py  content.py  datatypes.py  network.py
libs/curl/windows/lib32/: curl.lib
libs/curl/windows/lib64/: curl.lib
maps/: worlds.json
scripts/: Parse.py
server_lang/: index.json  zh-cn.json
src/alchemy/: Alchemy.cpp  Alchemy.h  AlchemyCore.cpp  AlchemyData.cpp
src/base/: big_int.cpp  big_int.h  color.h  detect.h  hash.cpp  hash_bundled.cpp  hash_libtomcrypt.cpp  lock_scope.h  math.cpp  math.h  system.cpp  system.h  types.h  vmath.h
src/base/tl/: algorithm.h  allocator.h  array.h  base.h  range.h  sorted_array.h  string.h  threading.h
src/engine/: console.h  demo.h  engine.h  kernel.h  map.h  masterserver.h  server.h  storage.h
src/engine/server/: multi_worlds.cpp  multi_worlds.h  register.cpp  register.h  server.cpp  server.h
src/engine/server/database/: connection_pool.h
src/engine/shared/: compression.cpp  config.cpp  config.h  config_variables.h  console.cpp  console.h  datafile.cpp  datafile.h  demo.cpp  demo.h  econ.cpp  econ.h  engine.cpp  filecollection.cpp  filecollection.h  http.cpp  http.h  huffman.cpp  huffman.h  jobs.cpp  json.cpp  jsonwriter.h  kernel.cpp  linereader.cpp  linereader.h  map.cpp  map.h  masterserver.cpp  memheap.cpp  netban.cpp  netban.h  network.cpp  network.h  network_client.cpp  network_conn.cpp  network_console.cpp  network_console_conn.cpp  network_server.cpp  network_stun.cpp  packer.cpp  (+9 more)
src/game/: astar.cpp  collision.cpp  collision.h  gamecore.cpp  gamecore.h  layers.cpp  layers.h  localization.cpp  localization.h  mapitems.h  pathfinding.cpp  pathfinding.h  variables.h  version.h  voting.h
src/game/server/: ai.cpp  ai.h  alchemy.h  bot.cpp  bot.h  botengine.cpp  botengine.h  chatai.cpp  chatai.h  chatglm.cpp  chatglm.h  entity.cpp  entity.h  eventhandler.cpp  eventhandler.h  gamecontext.cpp  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gameworld.cpp  gameworld.h  player.cpp  player.h  wave.cpp  wave.h
src/game/server/ai/: defence.cpp  defence.h  dm_ai.cpp  genetics.cpp  genetics.h  strategy.cpp  strategy.h
src/game/server/entities/: character.cpp  character.h  flag.cpp  flag.h  laser.cpp  laser.h  pickup.cpp  pickup.h  projectile.cpp  projectile.h
src/game/server/gamemodes/: mod.cpp  mod.h
src/mastersrv/: mastersrv.cpp  mastersrv.h
src/teeother/: stdafx_server.h  stdafx_shared.h
src/teeother/components/: localization.cpp  localization.h
src/teeother/flat_hash_map/: bytell_hash_map.h  unordered_map.h
src/teeother/system/: string.h
src/teeother/tl/: hashtable.h  singletion.h
src/teeuniverses/components/: localization.cpp  localization.h
src/teeuniverses/system/: string.h
src/teeuniverses/tl/: allocator.h  hashtable.h
src/test/: main.cpp
src/test/noused/: labyrinth.cpp  main.cpp  pathfinder.cpp  pathfinder.h
src/versionsrv/: mapversions.h  versionsrv.cpp
